# wave-sim-3d

./: Cargo.toml  README.md
src/: app.rs  camera.rs  main.rs  misc.rs  render.wgsl  simulation.rs  vertex.rs
src/marching_cubes/: mod.rs  table.rs
src/shaders/: compute.wgsl  render.wgsl
src/ui/: mod.rs  sci_dragger.rs
