[package]
name = "wave-sim-3d"
version = "0.1.0"
edition = "2021"

[dependencies]
compute = { path = "../compute", features = [ "interactive" ] }
# compute = { git = "https://github.com/connorslade/compute", features = [
#     "interactive",
# ] }

anyhow = "1.0.95"
encase = { version = "0.10.0", features = ["nalgebra"] }
itertools = "0.14.0"
rayon = "1.10.0"
ordered-float = "5.0.0"
